[gd_scene load_steps=39 format=3 uid="uid://d4dr7cigdptuw"]

[ext_resource type="Script" uid="uid://pn8dke6g2b6b" path="res://entities/components/health_component.gd" id="1_hytk1"]
[ext_resource type="Script" uid="uid://c6v5glxbohwtn" path="res://entities/enemies/fire_spiter/fire_spiter.gd" id="1_jwvy8"]
[ext_resource type="Script" uid="uid://q8hcxid6pdlo" path="res://entities/components/hitbox_component.gd" id="2_4vi4v"]
[ext_resource type="Script" uid="uid://de543k5gbwr5b" path="res://entities/components/damage_component.gd" id="4_0wssh"]
[ext_resource type="Script" uid="uid://3ogw5kcrnr0k" path="res://entities/components/projectile_spawner_component.gd" id="5_blgr4"]
[ext_resource type="Script" uid="uid://c1dec3hnix6q1" path="res://entities/components/orientation_component.gd" id="6_erk2o"]
[ext_resource type="Script" uid="uid://4p0tbv3mot6r" path="res://entities/components/fov_component.gd" id="7_gyr8y"]
[ext_resource type="Script" uid="uid://ltuwdw82gobd" path="res://entities/enemies/components/player_tracking_component.gd" id="8_cxpwe"]
[ext_resource type="Texture2D" uid="uid://bob67mkevuuhh" path="res://entities/enemies/fire_spiter/assets/fire_spiter.png" id="9_nchao"]
[ext_resource type="Texture2D" uid="uid://b2xxl5rs2ijik" path="res://assets/progress_outline.png" id="10_x44r6"]
[ext_resource type="Script" uid="uid://c7xpamyhdiymg" path="res://entities/enemies/components/health_bar_component.gd" id="11_rcd8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j6wm"]
size = Vector2(16, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6ui0"]
size = Vector2(16, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7as2"]
atlas = ExtResource("9_nchao")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljn63"]
atlas = ExtResource("9_nchao")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o10r4"]
atlas = ExtResource("9_nchao")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvkyh"]
atlas = ExtResource("9_nchao")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gd8h"]
atlas = ExtResource("9_nchao")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtno1"]
atlas = ExtResource("9_nchao")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5i84"]
atlas = ExtResource("9_nchao")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sqpc"]
atlas = ExtResource("9_nchao")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssj7l"]
atlas = ExtResource("9_nchao")
region = Rect2(128, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0iue"]
atlas = ExtResource("9_nchao")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jki8"]
atlas = ExtResource("9_nchao")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlfc2"]
atlas = ExtResource("9_nchao")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmldk"]
atlas = ExtResource("9_nchao")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dna0"]
atlas = ExtResource("9_nchao")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsxf2"]
atlas = ExtResource("9_nchao")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgbxg"]
atlas = ExtResource("9_nchao")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cci1t"]
atlas = ExtResource("9_nchao")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imcin"]
atlas = ExtResource("9_nchao")
region = Rect2(128, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_blkul"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7as2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljn63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o10r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvkyh")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gd8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtno1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5i84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sqpc")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssj7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0iue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jki8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlfc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmldk")
}],
"loop": true,
"name": &"move_appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dna0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsxf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgbxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cci1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imcin")
}],
"loop": true,
"name": &"move_disappear",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_h3kyv"]
colors = PackedColorArray(0.870588, 0, 0, 1, 0.870588, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8ng8n"]
gradient = SubResource("Gradient_h3kyv")
width = 14
height = 2

[sub_resource type="Animation" id="Animation_me8ow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_km7lc"]
resource_name = "attack"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_projectile"
}, {
"args": ["move"],
"method": &"change_state"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"attack"],
"method": &"play"
}, {
"args": [&"idle"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_g17b7"]
resource_name = "move_disappear"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.3, 2.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pick_spot"
}, {
"args": ["idle"],
"method": &"change_state"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [&"", 1.0, false],
"method": &"play"
}, {
"args": [&"move_disappear"],
"method": &"play"
}, {
"args": [&"move_appear"],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ns16c"]
_data = {
&"RESET": SubResource("Animation_me8ow"),
&"attack": SubResource("Animation_km7lc"),
&"move_disappear": SubResource("Animation_g17b7")
}

[node name="FireSpiter" type="CharacterBody2D"]
script = ExtResource("1_jwvy8")
move_radius = 256
min_move_radius = 64

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4j6wm")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_hytk1")
max_health = 4

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 32
script = ExtResource("2_4vi4v")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_p6ui0")

[node name="DamageComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_0wssh")
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_4j6wm")

[node name="ProjectileSpawnerComponent" type="Node" parent="."]
script = ExtResource("5_blgr4")
projectile_scene_path = "res://entities/projectiles/enemy/fire_projectile/fire_projectile.tscn"
projectile_speed = 64

[node name="OrientationComponent" type="Node2D" parent="."]
script = ExtResource("6_erk2o")

[node name="FOVComponent" type="RayCast2D" parent="." node_paths=PackedStringArray("orientation_component")]
collision_mask = 2
script = ExtResource("7_gyr8y")
orientation_component = NodePath("../OrientationComponent")
angle = 360
angle_step = 10
scan_range = 380

[node name="PlayerTrackingComponent" type="Node" parent="." node_paths=PackedStringArray("orientation_component", "fov_component")]
script = ExtResource("8_cxpwe")
orientation_component = NodePath("../OrientationComponent")
fov_component = NodePath("../FOVComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_blkul")
animation = &"attack"

[node name="HealthbarComponent" type="TextureProgressBar" parent="." node_paths=PackedStringArray("health_component")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
texture_under = ExtResource("10_x44r6")
texture_progress = SubResource("GradientTexture2D_8ng8n")
texture_progress_offset = Vector2(1, 1)
script = ExtResource("11_rcd8o")
health_component = NodePath("../HealthComponent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ns16c")
}
